[package]
name = "async-in-depth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
blake3 = "1.3.3"
futures = "0.3.27"
jemallocator = "0.5.0"
rayon = "1.7.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
snafu = { version = "0.7.4" }
tokio = { version = "1.26.0", features = ["net", "macros", "rt-multi-thread", "full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
toml = "0.7.3"
url = "2.3.1"
