[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"
default-run = "my-redis"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
crossbeam = "0.8.2"
futures = "0.3.28"
mini-redis = "0.4.1"
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
