[package]
name = "trace-ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "serde", "serde_json", "json", "local-time", "time"] }
